# studious-octo-parakeet

./: .gitlab-ci.yml  Dockerfile  Makefile  Pipfile  setup.cfg  setup.py
doc/: conf.py  index.rst
src/: __init__.py
studious_octo_parakeet/: __init__.py  main.py
tests/: test_main.py
