
[metadata]
author = marion
author_email =
description =
long_description = file: README.md
keywords = d3m, score, validation
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Development Status   :: 3 - Alpha

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
install_requires =
    pipenv
packages = find:

[options.package_data]
* = *.txt, *.rst, *.md

[pycodestyle]
max-line-length = 120

[tool:pytest]
addopts = --verbose
